[package]
name = "yoga"
description = "Rust bindings for Facebook's Yoga, a Flexbox layout engine"
license = "MIT"
repository = "https://github.com/bschwind/yoga-rs"
version = "0.3.1"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
build = "build.rs"
edition = "2021"

[features]
default = []
serde_support = ["serde", "serde_derive", "ordered-float/serde"]

[build-dependencies]
cc = "1.0.17"
bindgen = "0.63.0"

[dependencies]
serde = { version = "1.0.27", optional = true }
serde_derive = { version = "1.0.27", optional = true }
ordered-float = "3.4.0"
