[package]
name = "yoga"
description = "Rust bindings for Facebook's Yoga, a Flexbox layout engine"
license = "MIT"
repository = "https://github.com/bschwind/yoga-rs"
version = "0.4.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
build = "build.rs"
edition = "2021"

[features]
default = []
serde_support = ["serde", "serde_derive", "ordered-float/serde"]

[build-dependencies]
bindgen = "0.71"
cc = "1.2.9"

[dependencies]
ordered-float = "3.4.0"
serde = { version = "1.0.151", optional = true }
serde_derive = { version = "1.0.151", optional = true }
